update index html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
     <header>
         <h1>Welcome to My Website</h1>
-        <p>Your tagline here</p>
+        <p>YAutomating tomorrow with data-driven insights</p>
     </header>
 
     <nav>
@@ -54,12 +54,14 @@
     <div class="content">
         <section id="home">
             <h2>Home</h2>
-            <p>Welcome to my GitHub Pages website! This is where you can share information about yourself or your projects.</p>
+            <p>Welcome to my GitHub Pages website!</p>
         </section>
 
         <section id="about">
             <h2>About Me</h2>
-            <p>Write a brief introduction about yourself here.</p>
+            <p>Hi, I'm Jaryl Ngan. I transform complex data landscapes into automated intelligence.
+                I'm a Data Engineer and Analytics specialist who bridges the gap between raw data and actionable insights. With expertise spanning blockchain analytics, financial markets, and cloud infrastructure, I specialize in building scalable data solutions that drive business value. My work combines rigorous mathematical foundations from my education with practical engineering skills honed at companies like Messari and Delphi Digital.
+                Whether it's designing ETL frameworks for blockchain networks, optimizing data pipelines, or developing automated analytics solutions, I focus on creating efficient, scalable systems that turn data complexity into clarity. My approach combines technical expertise in Python, SQL, and cloud technologies with a deep understanding of business needs.</p>
         </section>
 
         <section id="projects">
@@ -73,7 +75,7 @@
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>You can reach me at: your.email@example.com</p>
+            <p>You can reach me at: jarylngan95@gmail.com</p>
         </section>
     </div>
 
